objects/Contract_Summary_Section__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Summary Section</relationshipLabel>
        <relationshipName>Contract_Summary_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_5__c</fullName>
        <defaultValue>&quot;QA EMEA: Dr. Martin von Truchsess&quot;</defaultValue>
        <label>Admin 5</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_6__c</fullName>
        <defaultValue>&quot;EH&amp;S EMEA: Sharon Harwood&quot; &amp; BR() &amp; 
&quot;EH&amp;S Germany: Dr. Uwe Klossowski, Ergin Sakarya&quot; &amp; BR() &amp; 
&quot;EH&amp;S France: Thomas Holbein&quot; &amp; BR() &amp; 
&quot;EH&amp;S Wohlen: David Leibundgut&quot;</defaultValue>
        <label>Admin 6</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_Law__c</fullName>
        <inlineHelpText>Is the applicable country law mentioned in the contract of European Union country and Swiss Law? Only legal acceptable countries are EU or Swiss.</inlineHelpText>
        <label>Is the Applicable Law acceptable?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_1__c</fullName>
        <defaultValue>&quot; Traffic: Richard Wagner, Axel Eggebrecht &quot;</defaultValue>
        <label>Commercial 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_2__c</fullName>
        <defaultValue>&quot;Traffic: Richard Wagner, Axel Eggebrecht&quot;</defaultValue>
        <label>Commercial 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_3__c</fullName>
        <defaultValue>&quot;Sales: Marc Benoit; RSD/RSM&quot; &amp; BR() &amp; 
&quot;Finance: Tim Spitzers&quot;</defaultValue>
        <label>Commercial 3 New</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>IF (TEXT(Is_FCPA_signed__c )= &quot;YES&quot;,1,
IF (TEXT(Is_FCPA_signed__c )= &quot;NO&quot;,0,
IF (TEXT(Is_FCPA_signed__c )= &quot;N/A&quot;,10,

00)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_and_or_Customer_Background_not_s__c</fullName>
        <inlineHelpText>&quot;We may not be allowed to sell into certain countries&quot;</inlineHelpText>
        <label>Are we allowed to sell into the country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Forecast_JDA_Forecast__c</fullName>
        <inlineHelpText>Are the delivery requirements requested (STR LT: 14 days on MTO parts and 7 days of MTS parts, incl. EDI orders), are the logistic terms (customer forecast) part of the contract?</inlineHelpText>
        <label>Customer Forecast/ JDA Forecast?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_we_have_the_delivery_address_of_a_pro__c</fullName>
        <inlineHelpText>Are additional costs included in your price calculation, e.g. Inspection visit/travel costs; type test costs; etc.?</inlineHelpText>
        <label>Did we consider add pricing factors?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_we_have_the_delivery_schedule_for_the__c</fullName>
        <label>Do we have a delivery schedule ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_S_Requirement__c</fullName>
        <inlineHelpText>Are the customers Environmental, Health- &amp; Security requirements covered by our ISO 14001 and OHSAS 18001 standard practises?</inlineHelpText>
        <label>EH&amp;S Requirement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_1A__c</fullName>
        <defaultValue>&quot;Check with your local Shared Service Finance team&quot;</defaultValue>
        <label>Financial 1A</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_1__c</fullName>
        <defaultValue>&quot;Local Shared Service Finance Team&quot; &amp; BR() &amp;
&quot;Legal: Henno Groell&quot;</defaultValue>
        <label>Financial 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_2__c</fullName>
        <defaultValue>&quot;Sales: Marc Benoit&quot;</defaultValue>
        <label>Financial 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_3__c</fullName>
        <defaultValue>&quot;Finance: Tim Spitzers&quot; &amp; BR() &amp; 
&quot;Legal: Henno Groell&quot;</defaultValue>
        <label>Financial 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Force_Majeure_Clause_not_mentionned__c</fullName>
        <inlineHelpText>Confirm that a &quot;Force Majeure Clause&quot; is included in the contract.</inlineHelpText>
        <label>&quot;Force Majeure&quot; Clause not mentionned?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_FCPA_signed__c</fullName>
        <description>If the customer is proposing a contract can we comply to their requirements? - New Added Admin Questions</description>
        <inlineHelpText>If customer = distributor or partner, a valid (&lt;14 months) FCPA contract needs to be signed and loaded in SFDC</inlineHelpText>
        <label>Is FCPA contract signed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_specific_financial_risk_with__c</fullName>
        <inlineHelpText>&quot;We need to ensure to be able to collect monies due from this customer&quot;</inlineHelpText>
        <label>Is there a specific financial risk with</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KAM_Support_not_needed__c</fullName>
        <inlineHelpText>Do you need KAM support driven in Ottobrunn?</inlineHelpText>
        <label>Can we execute w/o Project Facilitator ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_1__c</fullName>
        <defaultValue>&quot;Finance: Tim Spitzers&quot;</defaultValue>
        <label>Legal 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_2__c</fullName>
        <defaultValue>&quot;Sales: Marc&quot; &amp; BR() &amp; 
&quot;PM: Dr. Frank Drumm, Dr. Robert Strobl&quot; &amp; BR() &amp; &quot;Legal: Henno Groell&quot; &amp; BR()&amp; 
&quot;Top Mgmt.: Bernd Fabian&quot; &amp; BR() &amp; 
&quot;BU Mgmt.: Tony Gatt &quot;</defaultValue>
        <label>Legal 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_3__c</fullName>
        <defaultValue>&quot;Legal: Henno Groell&quot;</defaultValue>
        <label>Legal 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Documentation_Risk__c</fullName>
        <inlineHelpText>Are all customer requested documentations available? E.g. Pre-Qualification Questionnaires, Supplier self-assessments, TESOG statements, etc.</inlineHelpText>
        <label>No Documentation Risk?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Financial_Risks_identified__c</fullName>
        <inlineHelpText>Are we requested to issee Securities? E.g. Performance Bonds, Confirmed Letter of Credit, Bank Guarantee or similar documents?</inlineHelpText>
        <label>No Financial Security Risks identified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Insurance_Coverage_needed__c</fullName>
        <inlineHelpText>Does the customer require insurance coverage for product liability and related issues beyond our standard limits (USD 5M/occurence and in the annual aggregate)?</inlineHelpText>
        <label>Liability levels covered by insurance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Payment_Risk__c</fullName>
        <inlineHelpText>&lt; 60 days payment terms in place? Payment terms beyond 90 days (60 days net or 45 days after month end are statutory maximum in France). Advance payment for deliveries or no securitizaion in place for transactions in risk countries, e.g. Africa, Moyen</inlineHelpText>
        <label>No Payment Risk?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Pre_Shipment_Inspection_Visits__c</fullName>
        <inlineHelpText>Are pre-shipment inspection visits part of the contract?</inlineHelpText>
        <label>Can we ship without inspection visit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Product_Risks_identified__c</fullName>
        <inlineHelpText>Are there technical risks of our products? E.g. Impact on acceptable limits of liability (stay wire, HV CA), etc.</inlineHelpText>
        <label>No Product Risks identified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Storage_Risk__c</fullName>
        <inlineHelpText>Must we consider internal or external storage costs for this project? E.g. Consignment stock, Temporary Storage due to political unrest, strikes, etc.</inlineHelpText>
        <label>No Storage Risk?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Technical_Spec_Risk__c</fullName>
        <inlineHelpText>Are all requested specifications available and agreed on? E.g. Technical Specifications, Technical Drawings, Testing Certificates, etc.</inlineHelpText>
        <label>No Technical Spec Risk?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_risk_onWarranty__c</fullName>
        <inlineHelpText>Is the Warranty term &lt;= than 24 months from delivery?</inlineHelpText>
        <label>No risk onWarranty?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_risk_on_Confidentiality_Clause__c</fullName>
        <inlineHelpText>Does the contract includes a confidentiality clause ensuring the confidential treatment of information exchanged with the customer?</inlineHelpText>
        <label>No risk on Confidentiality Clause?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_risk_on_Liability_Clause__c</fullName>
        <label>No risk on Liability Clause?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_risk_on_Penalties_clauses__c</fullName>
        <inlineHelpText>Is a clear penalty limitation written in the contract? E.g. Penalties for defective products or delayed deliveries are limited to percentage of product value or price of delayed delivery, but &gt;10% of the product value or &gt;10% of the price</inlineHelpText>
        <label>No risk on Penalties clauses?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_risk_on_Pricing__c</fullName>
        <inlineHelpText>Is the pricing according to the standard price list loaded in SAP?</inlineHelpText>
        <label>Is there a Pricing Risk?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_risks_on_CoO_EU_pref_treatment__c</fullName>
        <inlineHelpText>Is the Country of Origin and / or EU preferential requirement known BEFORE we sign an agreement?</inlineHelpText>
        <label>Do we comply to CoO/EU requirements?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_risks_on_Lead_Time__c</fullName>
        <inlineHelpText>&quot;Can we ship at the requested date? 
14 days on MTO parts and 7 days of MTS parts (incl. EDI orders). 
Note: Different contacts for Planning depending on Production site (DDP=Default Delivery Plant). &quot;</inlineHelpText>
        <label>Are we able to accept the lead time requ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_specific_pricing_Clause__c</fullName>
        <inlineHelpText>Is a Pricing clause stated in the contract allowing us to change the price following a change of the costs of production?</inlineHelpText>
        <label>Can we adjust prices?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract Summary Section</relationshipLabel>
        <relationshipName>Contract_Summary_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation_1__c</fullName>
        <defaultValue>&quot;Sales: Marc Benoit&quot;&amp; BR() &amp; 
&quot;PM: Dr. Frank Drumm, Dr. Robert Strobl&quot;&amp; BR() &amp; 
&quot;Finance: Tim Spitzers&quot;</defaultValue>
        <label>Organisation 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organisation_2__c</fullName>
        <defaultValue>&quot;Demand/KAM: Michael Ludwig&quot;</defaultValue>
        <label>Organisation 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organisation_3__c</fullName>
        <defaultValue>&quot;Logistic: Maria Guerra&quot;&amp; BR() &amp; 
&quot;Finance: Tim Spitzers&quot;&amp; BR() &amp; 
&quot;Sales: Marc Benoit&quot;</defaultValue>
        <label>Organisation 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organisation_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Team_not_needed__c</fullName>
        <inlineHelpText>Do we need a cross functional project team? Do we want to do more than just supplying standard products? E.g. HESCO Pakistan; CAMEG Algeria, etc.</inlineHelpText>
        <label>Project Team not needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Requirement__c</fullName>
        <inlineHelpText>Are the customers requirements covered by our ISO 9001 and standard practises?</inlineHelpText>
        <label>QA Requirements ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TESOG_Terms_Conditions_in_place__c</fullName>
        <inlineHelpText>TESOG General Terms and Conditions of Business are mandatory since November 2011; are they in place with this customer? Comment: The TESOG terms are applicable to all standard sales transactions by default. We refer to them in our quotations</inlineHelpText>
        <label>TESOG Terms &amp; Conditions in place?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TESOG_or_local_entity_contract__c</fullName>
        <inlineHelpText>Is the customer invoiced via TESOG?</inlineHelpText>
        <label>TESOG or local entity contract?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_standard_Incoterms_in_place__c</fullName>
        <inlineHelpText>&quot;Does the contract includes TE standard Incoterms as follows? 
CPT = Carriage paid to; 
CFR = Cost and Freight &quot;</inlineHelpText>
        <label>TE standard Incoterms in place?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_1__c</fullName>
        <defaultValue>&quot;PM: Dr. Frank Drumm, Dr. Robert Strobl&quot;</defaultValue>
        <label>Technical 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technical_2__c</fullName>
        <defaultValue>&quot;PM: Dr. Frank Drumm, Dr. Robert Strobl&quot;</defaultValue>
        <label>Technical 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technical_3__c</fullName>
        <defaultValue>&quot;QM EMEA: Dr. Martin von Truchsess (Ottobrunn)&quot; &amp; BR() &amp; 
&quot;QM France: Jean-Francois Menard (Gevrey)&quot; 
&amp; BR() &amp; 
&quot;PM Nuclear EMEA: Janez Pavsek (Ottobrunn)&quot; &amp; BR() &amp; 
&quot;or Uwe Lubosch (Ottobrunn)&quot;</defaultValue>
        <label>Technical 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Question3__c</fullName>
        <label>Technical Question3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Clause__c</fullName>
        <inlineHelpText>Is a termination clause in the contract?</inlineHelpText>
        <label>Termination Clause?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_claim_based_on_replacing_produc__c</fullName>
        <inlineHelpText>Anything else in addition to supplying substitute products (e.g., are we in charge of de-installation and re-installation?</inlineHelpText>
        <label>Warranty claim base on replacing product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Written_Contract_in_place__c</fullName>
        <inlineHelpText>Exists a written contract with this customer / potential new customer loaded in SFDC?</inlineHelpText>
        <label>Written Contract in place?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Summary Section</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Contract Summary Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Summary Section</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>